--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -23,7 +23,7 @@ env:
   # Your solution name
   PLUGIN_SLN_NAME: "Astromechanics Aperture Control"
   # The name of the resulting dll file
-  PLUGIN_DLL_NAME: "Astromechanics Aperture Control"
+  PLUGIN_DLL_NAME: "DaleGhent.NINA.AstromechApertureControl"
   # The relative path to your manifest folder inside the manifest repository
   PLUGIN_MANIFEST_PATH: "a/Astromechanics Aperture Control/3.0.0"
   # Should this be in the beta plugin channel?
